Fixed wrap and margins

--- a/style.css
+++ b/style.css
@@ -61,13 +61,16 @@ p
 
 #help
 {
-  margin: 0 3.5em 3.5em 3.5em;
-  width: 100%;
+  margin: 0;
+  padding-top: .5em;
+  padding-left: 3.5em;
+  padding-right: 3.5em;
+  padding-bottom: 3.5em;
+  min-width: 600px;
 }
 
 #help p
 {
-  width: 100%;
   text-align: left;
   font-size: 1.2em;
   line-height: 1.5em;
@@ -80,6 +83,7 @@ p
   font-size: 1.8em;
   line-height: 1em;
   font-weight: bold;
+  white-space: nowrap;
 }
 
 #total
